# bybit-rust-sdk-gen

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  shared-types.json  tsconfig.json
bybit-rust-sdk/: Cargo.toml
bybit-rust-sdk/src/: lib.rs
bybit-rust-sdk/src/client/: BaseWebsocketClient.rs  RestClientV5.rs  SpotClientV3.rs  WebsocketAPIClient.rs  WebsocketClient.rs  config.rs  mod.rs  signing.rs
bybit-rust-sdk/src/constants/: enums.rs  mod.rs
bybit-rust-sdk/src/types/: mod.rs  shared.rs  shared_v5.rs
bybit-rust-sdk/src/types/request/: account_asset.rs  contract.rs  copy_trading.rs  inverse.rs  linear.rs  mod.rs  unified_margin.rs  usdc_options.rs  usdc_perp.rs  usdc_shared.rs  v5_account.rs  v5_asset.rs  v5_broker.rs  v5_crypto_loan.rs  v5_earn.rs  v5_market.rs  v5_p2p_trading.rs  v5_position.rs  v5_pre_upgrade.rs  v5_rfq.rs  v5_spot_leverage_token.rs  v5_spreadtrading.rs  v5_trade.rs  v5_user.rs
bybit-rust-sdk/src/util/: mod.rs
hand-written/: Cargo.toml  README.md  rustfmt.toml
hand-written/examples/: rest_market_data.rs  rest_private_order.rs  ws_subscription.rs
hand-written/src/client/: BaseRestClient.rs  BaseWebsocketClient.rs  config.rs  signing.rs
hand-written/tests/: exchange.rs
reports/: inline-type-report.md
scripts/: gen.sh  post-gen-rust.sh
spec/: issues.md
src/: bybitClientHandlers.ts  bybitHandlers.ts  clientTranspiler.ts  codeGenerator.ts  console.ts  errors.ts  fileGenerator.ts  fileStructure.ts  importManager.ts  inlineTypeRegistry.ts  parser.ts  typeConverter.ts  typeRegistry.ts  types.ts  utils.ts
(+26 files in other folders)
