[package]
name = "bybit-rust-sdk"
version = "0.1.0"
edition = "2024"
description = "Bybit PI SDK for Rust"
license = "MIT"

[lib]
name = "bybit_rust_sdk"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.28"
strum_macros = "0.28"
thiserror = "2.0"
derive_builder = "0.20"
indexmap = { version = "2.0", features = ["serde"] }
async-trait = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
tokio = { version = "1.39", features = ["full"] }